Fixed right navigation overflow issue and structured search page

--- a/web/app/themes/sage-frontend/assets/styles/components/_nav.scss
+++ b/web/app/themes/sage-frontend/assets/styles/components/_nav.scss
@@ -3,15 +3,21 @@
 	background-color: #2c3e63;
 	border: none;
 	border-radius: 0;
+	position: relative;
 }
 
 .background-blue {
 	background-color: #2c3e63;
 }
 
-.left-right, .right-nav {
-	position: absolute;
-    right: 0;
+#nav-cont {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+
+	.left-nav {
+		
+	}
 }
 
 .nav>li>a, .dropdown-item {
@@ -31,8 +37,9 @@
 }
 
 .dropdown-menu {
+width: auto;
 	display: none;
-	position: absolute;
+	/* position: absolute; */
 	z-index: 1;
 	padding-top: 0;
 	padding-bottom: 0;
@@ -61,6 +68,7 @@
 }
 
 .nav-item {
+	height: 42px;
 	position: relative;
 }
 
